# Tiny-Interpreter

./: CMakeLists.txt  README.md  test1.tiny  test2.tiny  test3.tiny
antlr-cpp-runtime/lib/: libantlr4-runtime.so.4.9.2
antlr-cpp-runtime/share/: antlr4-demo
src/: gene.sh  main.cpp
src/antlr/: Tiny.g4  Tiny.txt  antlr-generate.sh
src/antlr/.antlr/: TinyLexer.interp  TinyLexer.java  TinyParser.java
src/tiny/: Compiler.cpp  Compiler.h  Function.cpp  Function.h  Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  SymbolTable.cpp  SymbolTable.h
tinysrc/: test1.tiny  test2.tiny  test3.tiny
